# whereisthis

./: .gitignore  Cargo.toml  README.md  main.py  match.py  pyproject.toml  scanner.py  styles.tcss  tui.py
src/: cli.rs  main.rs  scanner.rs
whereisthis/: tui.py
whereisthis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
