[project]
name = "whereisthis"
version = "0.1.2"
description = "human language based file finder"
authors = [{ name = "divpreeet" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
]

[project.scripts]
whereisthis = "whereisthis.tui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whereisthis*"]

[tool.setuptools.package-data]
whereisthis = ["styles.tcss"]